--- a/hw4/components/DogBtn.css
+++ b/hw4/components/DogBtn.css
@@ -1,4 +1,13 @@
 #dogImg{
-    height: 100px;
+    height: 80px;
     width: 100px;
+    border-radius: 5%;
+    margin-top: 5px;
+}
+
+button{
+    background-color: white;
+    border: solid;
+    border-color: #3A405A;
+  border-width: medium;
 }
