--- a/hw4/styles.css
+++ b/hw4/styles.css
@@ -8,8 +8,8 @@ footer {
     width:  100%;
     height: 50px;
     background-color: #3A405A;
-    position: absolute;
-    bottom: 0;
+/*     position: absolute;
+    bottom: 0; */
 }
 
 body{
