--- a/FinalProject/components/ContactOwner.css
+++ b/FinalProject/components/ContactOwner.css
@@ -24,3 +24,10 @@
   border-width: medium;
   border-radius: 10px;
 }
+
+#kennelInput{
+  border: solid;
+  border-color: #3A405A;
+border-width: medium;
+border-radius: 10px;
+}
