--- a/FinalProject/components/FavouritesSidebar.css
+++ b/FinalProject/components/FavouritesSidebar.css
@@ -15,6 +15,7 @@
     border: solid;
     border-color: #3A405A;
     border-width: medium;
+    margin-top: 10px;
   }
 
   .favouriteDogs{
@@ -25,6 +26,15 @@
     width: 120px;
     margin: 10px;
     display:flex;
-flex-direction: column;
-background-color: #eaeaea;
+    flex-direction: column;
+    background-color: #eaeaea;
+    align-items: center;
+  }
+
+  .showHideFaves{
+    margin: 20px;
+  }
+
+  .removeFaveDog{
+    margin-bottom: 10px;
   }
